# programacion-disfuncional

./: README.md
dobble/: dobble.cabal  estado.txt
dobble/app/: Main.hs
dobble/app/Dobble/: Card.hs  Foldables.hs  Round.hs  Ui.hs  Utils.hs
