cabal-version:      2.4
name:               dobble
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Each two cards have one symbol in common. Be the first to find it to win the card.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:

executable dobble
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:
        Dobble.Ui

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options: -threaded
    build-depends:    
        base,
        brick,
        vty,
        random,
        mtl
    hs-source-dirs:   app
    default-language: Haskell2010
